--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Test</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello, My World!</h1>
     <h2>Ini Aku, Andika!</h2>
 </body>    
 </html>
