--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Test</title>
 </head>
 <body>
-    <h1>Hello, My World!</h1>
-    <h2>Ini Aku, Andika!</h2>
+    <h1 style="font-size:10vw">Hello, My World!</h1>
+    <h3>Ini Aku, Andika!</h3>
 </body>    
 </html>
 
