--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Test RevoU Bootcamp</title>
 </head>
 <body>
     <h1 style="font-size:10vw">Hello, My World!</h1>
     <h3>Ini Aku, Andika!</h3>
+    <p>Salam Kenal, ya, semuanyaaaaa~!</p>
 </body>    
 </html>
 
