--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- ini adalah halaman index yang kubuat sejak 30 Juni 2025-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 style="font-size:10vw">Hello, My World!</h1>
-    <h3>Ini Aku, Andika!</h3>
-    <p>Salam Kenal, ya, semuanyaaaaa~!</p>
+    <h3>Ini Aku <br/> Andika!</h3>
+    <hr/>
+    <p style="color: red;">Salam Kenal, ya, semuanyaaaaa~!</p>
 </body>    
 </html>
 
