--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1 style="font-size:10vw">Hello, My World!</h1>
     <h3>Ini Aku <br/> Andika!</h3>
     <hr/>
-    <p style="color: red;">Salam Kenal, ya, semuanyaaaaa~!</p>
+    <p style="color: red;">Salam Kenal, ya, <b>semuanyaaaaa~!</b><i>semuanyaaaaa~!</i></p>
+    <p>ini <sub>kubuat untuk </sub> <sup>belajar, lho!</sup></p>
 </body>    
 </html>
 
