adding more fourth elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <h3>Ini Aku <br/> Andika!</h3>
     <hr/>
     <p style="color: red;">Salam Kenal, ya, <b>semuanyaaaaa~!</b><i>semuanyaaaaa~!</i></p>
-    <p>ini <sub>kubuat untuk </sub> <sup>belajar, lho!</sup></p>
+    <p>ini <sub>kubuat untuk </sub> <sup>belajar, lho!</sup> itu saja!</p>
+
+    <ul>
+        <li>Belajar HTML</li>
+        <li>Belajar CSS</li>
+        <li>Belajar JavaScript</li>
+        <li>Belajar Git</li>
+        <li>Belajar GitHub</li>
+        <li>Belajar RevoU Bootcamp</li>
+    </ul>
+    <ol>
+        <!-- berupa angka -->
+        <li>Belajar HTML</li>
+        <li>Belajar CSS</li>
+        <li>Belajar JavaScript</li>
+        <li>Belajar Git</li>
+        <li>Belajar GitHub</li>
+        <li>Belajar RevoU Bootcamp</li>
+    </ol>    
 </body>    
 </html>
 
