adding table  elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
         <li>Belajar Git</li>
         <li>Belajar GitHub</li>
         <li>Belajar RevoU Bootcamp</li>
-    </ol>    
+    </ol>
+    <table>
+        <thead>
+            <!-- ini untuk bagian row -->
+            <tr>
+                <th>Nama</th>
+                <th>Umur</th>
+                <th>Hobi</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Andika</td>
+                <td>20</td>
+                <td>Belajar</td>
+            </tr>
+            <tr>
+                <td>Budi</td>
+                <td>22</td>
+                <td>Main Game</td>
+            </tr>
+            <tr>
+                <td>Cici</td>
+                <td>19</td>
+                <td>Membaca Buku</td>
+            </tr>
+        </tbody>
+    </table>    
 </body>    
 </html>
 
