adding more list elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
         <li>Belajar GitHub</li>
         <li>Belajar RevoU Bootcamp</li>
     </ol>
+    <ol type="a">
+        <!-- berupa huruf -->
+        <li>Belajar HTML</li>
+        <li>Belajar CSS</li>
+        <li>Belajar JavaScript</li>
+        <li>Belajar Git</li>
+        <li>Belajar GitHub</li>
+        <li>Belajar RevoU Bootcamp</li>
+    </ol>
+    <ol type="i">
+        <!-- berupa angka romawi -->
+        <li>Belajar HTML</li>
+        <li>Belajar CSS</li>
+        <li>Belajar JavaScript</li>
+        <li>Belajar Git</li>
+        <li>Belajar GitHub</li>
+        <li>Belajar RevoU Bootcamp</li>
+    </ol>
     <table>
         <thead>
             <!-- ini untuk bagian row -->
