adding more table elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>Belajar GitHub</li>
         <li>Belajar RevoU Bootcamp</li>
     </ol>
-    <table>
+    <table border="1" >
         <thead>
             <!-- ini untuk bagian row -->
             <tr>
@@ -59,6 +59,7 @@
         </thead>
         <tbody>
             <tr>
+                <!-- isi untuk setiap baris -->
                 <td>Andika</td>
                 <td>20</td>
                 <td>Belajar</td>
