adding image elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                 <td>Membaca Buku</td>
             </tr>
         </tbody>
-    </table>    
+    </table>
+    <p>Ini adalah contoh gambar</p>
+    <img src="./Ni Dona.png" height="250px" alt="?"/>    
 </body>    
 </html>
 
