adding more image elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </tbody>
     </table>
     <p>Ini adalah contoh gambar</p>
-    <img src="./Ni Dona.png" height="250px" alt="?"/>    
+    <img src="./Images/Ni Dona.png" height="250px" alt="?"/>    
 </body>    
 </html>
 
