adding external image elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
         </tbody>
     </table>
     <p>Ini adalah contoh gambar</p>
-    <!-- source internal dari file proyek -->
-    <img src="./Images/Ni Dona.png" height="250px" alt="?"/>
-    <!-- source eksternal dari internet -->
-    <img src="https://www.kamen-rider-official.com/uploads/gotchard_summary_production_note/image1/1556/bf11ce5d-60f0-434c-88a8-2f01d82ab34a.jpg" height="250px" alt="Gotcha!"/>
+        <!-- source internal dari file proyek -->
+        <img src="./Images/Ni Dona.png" height="250px" alt="?"/>
+        <!-- source eksternal dari internet -->
+        <img src="https://www.kamen-rider-official.com/uploads/gotchard_summary_production_note/image1/1556/bf11ce5d-60f0-434c-88a8-2f01d82ab34a.jpg" height="250px" alt="Gotcha!"/>
+    <p>Ini adalah contoh link</p>
+        <a href="https://tvtropes.org/pmwiki/pmwiki.php/Recap/KamenRiderGotchardFinalEpisodeOurChemyXStory">RevoU</a>
+    </p>
 </body>    
 </html>
 
