adding link elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
         <!-- source eksternal dari internet -->
         <img src="https://www.kamen-rider-official.com/uploads/gotchard_summary_production_note/image1/1556/bf11ce5d-60f0-434c-88a8-2f01d82ab34a.jpg" height="250px" alt="Gotcha!"/>
     <p>Ini adalah contoh link</p>
+        <!-- memanggil link dari internet -->
         <a href="https://tvtropes.org/pmwiki/pmwiki.php/Recap/KamenRiderGotchardFinalEpisodeOurChemyXStory">RevoU</a>
+        <!-- memanggil link dari file proyek -->
+        <a href="./secondo.html">ini adalah file HTML keduaku</a>
     </p>
 </body>    
 </html>
