adding form elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
         <!-- langsung scroll ke tempat yang ingin kita tuju-->
         <a href="#hoeru tono">Scroll ke bawah</a>
     </p>
+    
+
+    <h4>Ini adalah contoh form</h4>
+    <form>
+        <label>Nama</label>
+        <input type="text" placeholder="Masukkan nama anda"/>
+        <br/>
+        <label>Umur</label>
+        <input type="number" min="0" max="10000" placeholder="Masukkan umur anda"/>
+        <br/>
+        <label>Komentar</label>
+        <textarea placeholder="Masukkan komentar anda"></textarea>
+    </form>
 
     <p id="hoeru tono">I've been fired more times than I can count. But I'll find it, both a part-time job and my wish. The Lone Wolf, Hoeru Tono! I'll become No.1! (クビになること幾星霜。見つけてみせるぜ バイトと願い。はぐれ一匹、遠野 吠！なってやるよナンバーワン！ Kubi ni naru koto ikuseisō. Mitsukete miseru ze baito to negai. Hagure Ippiki, Tōno Hoeru! Natte yaru yo Nanbā Wan!)</p>
 </body>    
