adding more form elements in second day of coding camp

--- a/index.html
+++ b/index.html
@@ -99,8 +99,36 @@
         <label>Umur</label>
         <input type="number" min="0" max="10000" placeholder="Masukkan umur anda"/>
         <br/>
+        <label>Password</label>
+        <input type="password" placeholder="Masukkan password anda"/>
+        <br/>
+        <label>Jenis Kelamin</label>
+        <!-- pilih jenis kelamin dengan select -->
+        <select>
+            <option value="laki-laki">Laki-laki</option>
+            <option value="perempuan">Perempuan</option>
+            <option value="lainnya">Lainnya</option>
+        </select>
+        <br/>
+        <label>Hobi</label>
+        <!-- pilih hobi dengan checkbox -->
+        <input type="checkbox" name="hobi" value="membaca"> Membaca
+        <input type="checkbox" name="hobi" value="menulis"> Menulis 
+        <br/>
+        <label>Minat</label>
+        <!-- pilih minat dengan radio button -->
+        <input type="radio" name="minat" value="teknologi"> Teknologi
+        <input type="radio" name="minat" value="seni"> Seni
+        <input type="radio" name="minat" value="olahraga"> Olahraga
+        <br/>
         <label>Komentar</label>
         <textarea placeholder="Masukkan komentar anda"></textarea>
+        <br/>
+        <input type="checkbox" name="hobi" value="membaca"> Saya setuju dengan syarat dan ketentuan
+        <br/>
+        <!-- submisi ada dua varian -->
+        <input type="submit" value="Kirim">
+        <button type="submit"> Kirim </button">
     </form>
 
     <p id="hoeru tono">I've been fired more times than I can count. But I'll find it, both a part-time job and my wish. The Lone Wolf, Hoeru Tono! I'll become No.1! (クビになること幾星霜。見つけてみせるぜ バイトと願い。はぐれ一匹、遠野 吠！なってやるよナンバーワン！ Kubi ni naru koto ikuseisō. Mitsukete miseru ze baito to negai. Hagure Ippiki, Tōno Hoeru! Natte yaru yo Nanbā Wan!)</p>
