--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <br/>
         <!-- submisi ada dua varian -->
         <input type="submit" value="Kirim">
-        <button type="submit"> Kirim </button">
+        <button type="submit"> Kirim </button>
     </form>
 
     <p id="hoeru tono">I've been fired more times than I can count. But I'll find it, both a part-time job and my wish. The Lone Wolf, Hoeru Tono! I'll become No.1! (クビになること幾星霜。見つけてみせるぜ バイトと願い。はぐれ一匹、遠野 吠！なってやるよナンバーワン！ Kubi ni naru koto ikuseisō. Mitsukete miseru ze baito to negai. Hagure Ippiki, Tōno Hoeru! Natte yaru yo Nanbā Wan!)</p>
