--- a/secondo.html
+++ b/secondo.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documentary for CSS Tailwind</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <p>
+    <p class="text-3xl pb-4 text-blue-500 font-bold ml-6 mt-6 bg-yellow-100">
         I know nothing of defeat nor mercy. Bridan's Special Attack Leader, the Unbeatable Fire Candle! I'll cleanse you with my flames. (負けは知らねえ容赦もねえ。ブライダン特攻隊長、不敗のファイヤキャンドル！俺の炎で浄化してやる。 Make wa shiranē yōsha mo nē. Buraidan Tokkō Taichō, Fuhai no Faiya Kyandoru! Ore no honō de jōka shite yaru.)
     </p>
 </body>
