adding tailwind in secondo.html 3

--- a/secondo.html
+++ b/secondo.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <p class="text-3xl pb-4 text-blue-500 font-bold pl-6 pt-6 bg-yellow-100">
-        I know nothing of defeat nor mercy. Bridan's Special Attack Leader, the Unbeatable Fire Candle! I'll cleanse you with my flames. (負けは知らねえ容赦もねえ。ブライダン特攻隊長、不敗のファイヤキャンドル！俺の炎で浄化してやる。 Make wa shiranē yōsha mo nē. Buraidan Tokkō Taichō, Fuhai no Faiya Kyandoru! Ore no honō de jōka shite yaru.)
+        I know nothing of defeat nor mercy. Bridan's Special Attack Leader, 
+        the Unbeatable Fire Candle! I'll cleanse you with my flames. 
+        (負けは知らねえ容赦もねえ。ブライダン特攻隊長、不敗のファイヤキャンドル！
+        俺の炎で浄化してやる。 Make wa shiranē yōsha mo nē. Buraidan Tokkō Taichō, 
+        Fuhai no Faiya Kyandoru! Ore no honō de jōka shite yaru.)
     </p>
 </body>
 </html>
